--- a/app/src/main/res/layout/activity_draw_pattern.xml
+++ b/app/src/main/res/layout/activity_draw_pattern.xml
@@ -7,10 +7,26 @@
     android:orientation="vertical"
     tools:context=".DrawPatternActivity">
 
-    <Button
-        android:id="@+id/btnOpenGallery"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnOpenGallery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tvParsedText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:layout_gravity="center"
+            android:layout_marginStart="10dp"/>
+
+
+    </LinearLayout>
 
     <nmsu.hcc.pattern_triggers.DrawingView
         android:id="@+id/llCanvas"
