--- a/app/src/main/res/layout/adapter_feature_items.xml
+++ b/app/src/main/res/layout/adapter_feature_items.xml
@@ -25,7 +25,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="0.5"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:text="B"/>
@@ -42,6 +42,11 @@
                 android:text="Set"/>
 
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black"/>
 
     </LinearLayout>
 
