--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">#353C6B</color>
+    <color name="colorPrimaryLight">#BABCCC</color>
+    <color name="colorAccent">#757A9A</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorSuperLightPrimary">#26BABCCC</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorGrey">#80000000</color>
+    <color name="colorBlue">#0845bf</color>
+
 </resources>
