--- a/app/src/main/res/layout/dialog_alphabet_list.xml
+++ b/app/src/main/res/layout/dialog_alphabet_list.xml
@@ -9,6 +9,31 @@
         android:layout_margin="10dp"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvHeaderText"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:text="Google Chrome"/>
+
+            <ImageView
+                android:id="@+id/ivCross"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:padding="5dp"
+                android:adjustViewBounds="true"
+                android:src="@drawable/ic_cross_round"/>
+
+        </LinearLayout>
+
         <androidx.cardview.widget.CardView
             android:layout_margin="10dp"
             app:cardCornerRadius="10dp"
@@ -16,12 +41,22 @@
             android:layout_height="wrap_content">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvContactList"
+                android:id="@+id/rvAlphabetList"
                 android:layout_margin="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
         </androidx.cardview.widget.CardView>
+
+        <Button
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="15dp"
+            android:id="@+id/btnDone"
+            android:background="@color/colorPrimaryLight"
+            android:layout_gravity="center"
+            android:text="Done"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
