--- a/app/src/main/res/layout/adapter_alphabet_list.xml
+++ b/app/src/main/res/layout/adapter_alphabet_list.xml
@@ -2,21 +2,21 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <LinearLayout android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <FrameLayout
             android:id="@+id/flBorder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="5dp"
             android:background="@drawable/bg_primary">
 
             <TextView
                 android:id="@+id/tvAlphabet"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_margin="5dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:gravity="center"
                 android:textSize="36sp"
                 android:textStyle="bold"
