--- a/app/src/main/res/layout/dialog_alphabet_list.xml
+++ b/app/src/main/res/layout/dialog_alphabet_list.xml
@@ -7,6 +7,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:padding="10dp"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <LinearLayout
@@ -34,29 +36,34 @@
 
         </LinearLayout>
 
-        <androidx.cardview.widget.CardView
-            android:layout_margin="10dp"
-            app:cardCornerRadius="10dp"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvAlphabetList"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvAlphabetList"
-                android:layout_margin="10dp"
-                android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/btnDone"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:background="@drawable/bg_primary_fill"
+                android:layout_gravity="center"
+                android:text="Done"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-        </androidx.cardview.widget.CardView>
-
-        <Button
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="15dp"
-            android:id="@+id/btnDone"
-            android:background="@color/colorPrimaryLight"
-            android:layout_gravity="center"
-            android:text="Done"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        </LinearLayout>
 
     </LinearLayout>
 
