popup menu added

--- a/app/src/main/res/layout/activity_draw_pattern.xml
+++ b/app/src/main/res/layout/activity_draw_pattern.xml
@@ -8,7 +8,7 @@
     tools:context=".activities.DrawPatternActivity">
 
     <TextView
-        android:id="@+id/tvSettings"
+        android:id="@+id/tvMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
@@ -17,7 +17,7 @@
         android:layout_gravity="top|end"
         android:gravity="center"
         android:textColor="@color/colorPrimary"
-        android:text="Settings"/>
+        android:text="Menu"/>
 
     <FrameLayout
         android:layout_width="match_parent"
