--- a/app/src/main/res/layout/adapter_alphabet_list.xml
+++ b/app/src/main/res/layout/adapter_alphabet_list.xml
@@ -20,6 +20,7 @@
                 android:gravity="center"
                 android:textSize="36sp"
                 android:textStyle="bold"
+                android:textColor="@color/colorPrimary"
                 android:text="M"/>
 
             <ImageView
