--- a/app/src/main/res/layout/adapter_feature_items.xml
+++ b/app/src/main/res/layout/adapter_feature_items.xml
@@ -18,6 +18,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:textColor="@color/colorPrimary"
                 android:text="Chrome Browser"/>
 
             <TextView
@@ -28,6 +29,7 @@
                 android:textSize="22sp"
                 android:textStyle="bold"
                 android:gravity="center"
+                android:textColor="@color/teal_700"
                 android:text="B"/>
 
             <TextView
@@ -45,7 +47,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="0.5dp"
             android:background="@color/black"/>
 
     </LinearLayout>
